syntax = "proto3";

package supplier;

// Supplier Service - Supplier information provider
service SupplierService {
  // Get supplier information for a product
  rpc GetInfo(InfoRequest) returns (InfoResponse);

  // Health check
  rpc HealthCheck(HealthRequest) returns (HealthResponse);
}

message InfoRequest {
  string product_id = 1;
}

message InfoResponse {
  string product_id = 1;
  int32 moq = 2;  // Minimum order quantity
  int32 lead_time_days = 3;
  double unit_price = 4;
  string supplier_name = 5;
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
  string service = 2;
}
